# ospery

./: .gitignore  Architecture.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
app/: app.py
data/analysis/: company_resolution.sql  data_profiling.sql  extraction_v4.sql  kev_epss_analysis.sql  signal_scoring.sql  tech_signals.sql
data/evals/: entity_classification.jsonl  entity_classification_hard.jsonl  profile_extraction.jsonl
data/serving/: osprey_serving.duckdb
docs/: ProblemAndApproach.md  Stage1_DataDiscovery.md  Stage2_Setup.md  Stage3_RawIngestion.md  Stage4_CompanyResolution.md  Stage5_EntityClassification.md  Stage6_SilverTransform.md  Stage7_LLMEnrichment.md  Stage8_GoldMart.md  Stage9_App.md  helper_commands.md
osprey/: __init__.py  config.py  schemas.py  warehouse.py
osprey/llm/: __init__.py  client.py  eval.py  eval_extract.py  prompts.py  runner.py  trace.py
osprey/orchestration/: __init__.py  definitions.py
osprey/pipelines/: __init__.py  build_serving_db.py  classify_entities.py  enrich_entities.py  extract_profiles.py  fetch_epss.py  fetch_kev.py  generate_pitches.py  ingest_bronze.py
skills/add-llm-enricher/: SKILL.md
transform/: .user.yml  dbt_project.yml  profiles.yml
transform/macros/: generate_schema_name.sql
transform/models/: sources.yml
transform/models/gold/: gold_companies.sql  gold_company_services.sql  gold_prospects.sql  schema.yml
transform/models/silver/: silver_company_candidates.sql  silver_company_tech.sql  silver_services.sql
transform/seeds/: country_codes.csv
